<resources>
    <string name="app_name">Mi Fit</string>
    <string name="share_uninstall_client">"This app isn't installed."</string>
    <string name="share_miliao_too_old">"The version of Mi Talk you're using is too old."</string>
    <string name="share_prepare_tips">Preparing data for sharing…</string>
    <string name="share_weibo_label">Weibo</string>
    <string name="share_pengyouquan_label">Moments</string>
    <string name="share_weixin_label">WeChat</string>
    <string name="share_qq_label">QQ</string>
    <string name="share_qq_zone_label">QZone</string>
    <string name="share_miliao_label">Mi Talk</string>
    <string name="share_line_label">Line</string>
    <string name="share_facebook_label">Facebook</string>
    <string name="share_twitter_label">Twitter</string>
    <string name="action_exit">Exit</string>
    <string name="share_to_miliao_target_feeds">Groups</string>
    <string name="share_to_miliao_target_friends">Friends</string>
    <string name="share_to_miliao_target_union">Work out buddies</string>
    <string name="share_miliao_path_selector">Share with</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_loading">Loading</string>
    <string name="dialog_confirm">Got it</string>
    <string name="actionbar_menu">Menu</string>
    <string name="alert_title_unable_start_camera">"Can't access Camera"</string>
    <string name="alert_msg_unable_start_camera">"Allow Camera usage if you restricted it.
If you didn't, restart the phone."</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="picker_menu_done">Done</string>
    <string name="open_gallery">Open gallery</string>
    <string name="scan_label">Put the QRCode in the square to scan.</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">Pull to refresh</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">Pull to fresh</string>
    <string name="shoes_package_name">com.xiaomi.hm.health.shoes</string>
    <string name="shoes_smart_shoes">%s</string>
    <string name="shoes_guangsu">Guangsu</string>
    <string name="shoes_used_distance">Shoes mileage</string>
    <string name="shoes_static_calibrate">Static calibration</string>
    <string name="shoes_release_binding">Unpair</string>
    <string name="shoes_introduction">About</string>
    <string name="shoes_bind">Pair</string>
    <string name="shoes_buy">Buy</string>
    <string name="shoes_description">With average life span of 400 to 800 km, running shoes are considered to be a long-term investment. That’s why most runners choose top-end products to make sure their running experience is healthy and comfortable.</string>
    <string name="shoes_calibrate_instruction">"Stand with your feet shoulder width apart
Wait for 5s "</string>
    <string name="shoes_calibrate_suggestion">Remember to recalibrate every time after removing the sensor</string>
    <string name="shoes_start_calibrate">Start</string>
    <string name="shoes_calibrating">Calibrating…</string>
    <string name="shoes_calibrate_failed">"Couldn't calibrate"</string>
    <string name="shoes_recalibrate">Try again</string>
    <string name="shoes_unbind_prompt">"Your shoes won't be able to sync running data with your phone."</string>
    <string name="shoes_unbind">Unpair</string>
    <string name="shoes_cancel">Cancel</string>
    <string name="shoes_bind_title">Pair shoes</string>
    <string name="shoes_binding">Pairing…</string>
    <string name="shoes_binded">Paired</string>
    <string name="shoes_select_shoes">Select shoes</string>
    <string name="shoes_usage">%s km</string>
    <string name="shoes_distance" formatted="false">%d / %d km</string>
    <string name="shoes_bind_success">Paired</string>
    <string name="shoes_count_down_text">%ds</string>
    <string name="shoes_calibrate_success">Calibrated</string>
    <string name="shoes_unbind_success">Unpaired</string>
    <string name="shoes_calibrate_bind_first">Pair shoes first</string>
    <string name="shoes_calibrate_connecting">Connecting…</string>
    <string name="shoes_calibrate_connect_failed">"Couldn't connect, try again"</string>
    <string name="shoes_bind_change_text" formatted="false">"You've already paired %s shoes, Pair %s instead?"</string>
    <string name="shoes_bind_change_ok">Replace</string>
    <string name="shoes_firmware_version">Firmware version</string>
    <string name="shoes_fetching">Getting info…</string>
    <string name="shoes_fetching_failed">"Couldn't get info"</string>
    <string name="shoes_skip">Skip</string>
    <string name="shoes_skip_calibrate_prompt">You need to calibrate to get accurate data. Skip calibration?</string>
    <string name="shoes_firmware_update">Firmware update</string>
    <string name="shoes_firmware_update_prompt">Scan QR code of the item you want to update</string>
    <string name="shoes_firmware_scanning">Scanning…</string>
    <string name="shoes_firmware_scan_success">Scan complete</string>
    <string name="shoes_firmware_scan_fail">"Couldn't scan"</string>
    <string name="shoes_firmware_scan_error">Scan error</string>
    <string name="shoes_firmware_connecting">Connecting…</string>
    <string name="shoes_firmware_connect_success">Connected</string>
    <string name="shoes_firmware_connect_fail">"Couldn't connect"</string>
    <string name="shoes_firmware_disconnect">Disconnected</string>
    <string name="running_main_startup_title1">Go outdoor, Go running</string>
    <string name="running_main_startup_subtitle1">To record accuracy running data</string>
    <string name="running_main_startup_subtitle2">use GPS and miband</string>
    <string name="running_main_go_now">Go</string>
    <string name="running_tip_open_ble_label">Turn on Bluetooth</string>
    <string name="running_tip_open_ble_content">Pair Mi Band to view pace</string>
    <string name="running_help_pre_mid_foot">Landing on forefeet/midfeet</string>
    <string name="running_help_slow_run">When running slowly, most people would naturally land on their midfeet or heels. When the running speed increases, more people would strike the ground with their forefeet. For example, most sprinters choose to land on their forefeet when running.</string>
    <string name="running_help_pros_cons">Pros and cons</string>
    <string name="running_help_foot_suggest1">Stick to your own running habits</string>
    <string name="running_help_foot_suggest2">"We don't recommend changing your running habits. If you choose to land on your midfeet and heels, wear shoes with better cushioning to reduce the impact of landing."</string>
    <string name="running_help_foot_people">Who can try landing on their forefeet when running?</string>
    <string name="running_help_foot_suggest3">When your knees require more protection, you can try landing on your forefeet more following the routine below.</string>
    <string name="running_help_foot_suggest4">Try running like this</string>
    <string name="running_help_foot_suggest5">Strike the ground right below you, keep your knees slightly bent, lean your body forward.</string>
    <string name="running_help_foot_suggest6">Run as if you were rotating a hot wheel with your feet.</string>
    <string name="running_help_foot_suggest7">Make smaller steps when you increase running speed.</string>
    <string name="running_help_foot_suggest8">Connect running shoes and make sure you land on your forefeet.</string>
    <string name="running_tip_known">Got it</string>
    <string name="running_help_pace_freq_illustra">Pace is the number of steps you make per minute when running.</string>
    <string name="running_help_pace_freq_suggest1">Gaining speed</string>
    <string name="running_help_pace_freq_suggest2">Runners usually increase their stride to gain speed. However, using this method can result in muscle damage. You can try to increase your pace to gain speed.</string>
    <string name="running_help_pace_freq_target">Pace goal</string>
    <string name="running_help_pace_freq_suggest3">Long-distance runners usually make 180 steps per minute. We recommend using this value as your pace goal.</string>
    <string name="running_help_pace_freq_suggest4">Connect Mi Band, make sure your pace is detected.</string>
    <string name="running_help_pace_freq_suggest5">"Turn on Bluetooth and connect Mi Band before running.
Keep Bluetooth on when running."</string>
    <string name="running_help_pace_freq_label">"What's pace?"</string>
    <string name="hr_tips1">"跑步前，开启蓝牙，连接手环； 
跑步中，保持蓝牙连接。"</string>
    <string name="hr_tips2">连接小米手环光感版，检测心率</string>
    <string name="hr_tips3">建议跑步时将心率控制在略低于最大有氧心率，可有效避免受伤的风险，同时得到健身减脂的效果。例如：华米神童的年龄为25岁，经常加班，缺乏运动；则其对应的最大有氧心率为180-25-5=150（单位：次/分）。建议跑步心率控制在140到150之间。</string>
    <string name="hr_tips4">有氧跑步，避免受伤，健身减脂</string>
    <string name="hr_tips5">"第一步，基础数值=180-年龄（单位：次/分）。
第二步，将基础数值配合最近身体状态进行调整。
1、如果最近得过重大疾病；基础数值-10。
2、受伤，状态不好，长期不锻炼；基础数值-5。
3、坚持运动超过2年，每周4次；基础数值+5。
温馨提示：超过65岁老人及不满16岁青少年不适用以上公式，需按照自身身体状况而定。"</string>
    <string name="hr_tips6">计算最大有氧心率</string>
    <string name="hr_tips7">每个人都有各自的最大有氧心率。跑步时，将心率控制在略低于最大有氧心率来训练，能提升有氧运动效率，提高燃烧脂肪的机能。如果高于该心率，无氧运动的比例会显著增加，身体将增加糖的消耗，降低脂肪消耗。</string>
    <string name="hr_tips8">最大有氧心率</string>
    <string name="hr_tips9">运动强度较高（跑得快）时，无氧运动的比例会提升，心率相对较高，身体会增加糖的消耗来供能，降低脂肪消耗。</string>
    <string name="hr_tips10">无氧运动，消耗糖供能</string>
    <string name="hr_tips11">运动强度较低（跑得慢）时，以有氧运动为主，此时心率相对较低，身体主要靠消耗脂肪供能。</string>
    <string name="hr_tips12">有氧运动，消耗脂肪供能</string>
    <string name="hr_dialog_title">跑步中查看心率变化</string>
    <string name="hr_dialog_ble">保持手机和手环蓝牙连接</string>
    <string name="hr_dialog_pace">手环连接后可显示步频</string>
    <string name="hr_dialog_wear">带紧手环，避免晃动，测量更精准</string>
    <string name="hr_dialog_go">立即出发</string>
    <string name="running_help_slow_run_suggest">二者各有利弊，中后掌着地时，脚跟受到落地冲击，对膝盖的冲击较大。而前掌着地对膝盖冲击较小，但是对跟腱和小腿肌肉素质要求较高。</string>
    <string name="running_help_foot_suggest9">"跑步前，开启蓝牙，连接跑鞋；
跑步中，保持蓝牙连接。"</string>
    <string name="bluetooth_not_enabled">"Bluetooth is disabled
Can not connect device"</string>
    <string name="enable_bluetooth">Enable bluetooth</string>
    <string name="enable_bluetooth_hint">Please click allow in the popup dialog</string>
    <string name="skip">Skip</string>
    <string name="baby_weight_detail_tips">"Several factors are involved in determining if a child's weight is healthy. Mi Scale compares a large pool of weight data for healthy children of the same age and gender to determine a mean weight.



A standard deviation refers to the average distance away from this group's mean weight. Weights within 1-2 standard deviations away from the group's mean weight are deemed normal. Weights below or above this range are determined to be underweight or obese, respectively.



The method above can only be used to determine if the weight of a child is normal relative to the group. Please consult a physician to confirm if a child is underweight or obese."</string>
    <string name="baby_weight_help">Help</string>
    <string name="baby_weight_help_title_new">Weighing your infant</string>
    <string name="set_rssi_distance">设置解锁距离</string>
    <string name="set_rssi_very_close">靠近手机</string>
    <string name="set_rssi_close">1m内</string>
    <string name="set_rssi_nearby">3m内</string>
    <string name="jump_measure_guide">Skip</string>
    <string name="label_countdown">Preparing to measure…</string>
    <string name="measure_reminder">"Keep your wrist at your chest level
and the sensor close to your skin"</string>
</resources>