<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/bg_color_white" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="never"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_pre_mid_foot" style="@style/RunningHelpLabel" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_slow_run" style="@style/RunningHelpContent" />
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.799988dip" android:src="@drawable/run_sole_p1" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_pros_cons" style="@style/RunningHelpLabel" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_slow_run_suggest" style="@style/RunningHelpContent" />
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.799988dip" android:src="@drawable/run_sole_p2" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_foot_suggest1" style="@style/RunningHelpLabel" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_foot_suggest2" style="@style/RunningHelpContent" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.799988dip" android:text="@string/running_help_foot_people" style="@style/RunningHelpLabel" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_foot_suggest3" style="@style/RunningHelpContent" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.799988dip" android:text="@string/running_help_foot_suggest4" style="@style/RunningHelpLabel" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_foot_suggest5" style="@style/RunningHelpContent" />
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.799988dip" android:src="@drawable/run_sole_p3" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_foot_suggest6" style="@style/RunningHelpContent" />
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.799988dip" android:src="@drawable/run_sole_p4" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_foot_suggest7" style="@style/RunningHelpContent" />
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.799988dip" android:src="@drawable/run_sole_p5" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_foot_suggest8" style="@style/RunningHelpLabel" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/running_help_foot_suggest9" style="@style/RunningHelpContent" />
    </LinearLayout>
</ScrollView>