<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/running_gps_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="#de000000" android:gravity="center" android:layout_width="wrap_content" android:layout_height="64.0dip" android:text="@string/hr_dialog_title" />
    <View android:background="#17000000" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/title" />
    <TextView android:textSize="14.0sp" android:textColor="#9c000000" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/hr_dialog_ble" android:layout_centerHorizontal="true" />
    <TextView android:textSize="12.0sp" android:textColor="#66000000" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/hr_dialog_pace" android:layout_centerHorizontal="true" />
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11.0dip" android:src="@drawable/run_heartrate_bluetooth" />
    <TextView android:textSize="14.0sp" android:textColor="#9c000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/hr_dialog_wear" android:layout_below="@id/image" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/avoid_use_indoor_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:src="@drawable/run_heartrate_uptight" />
    <Button android:textSize="@dimen/running_gps_dialog_button" android:textColor="@drawable/btn_text" android:id="@id/button" android:background="@drawable/running_gps_dialog_btn_bg" android:layout_width="240.0dip" android:layout_height="35.0dip" android:layout_marginLeft="42.0dip" android:layout_marginTop="29.0dip" android:layout_marginRight="42.0dip" android:layout_marginBottom="32.0dip" android:text="@string/hr_dialog_go" />
</LinearLayout>