<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/bg_color_grey" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="30.0sp" android:textColor="@color/font_color_c8" android:gravity="center" android:id="@id/bluetooth_not_enabled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/bluetooth_not_enabled" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:lineSpacingExtra="14.0dip" />
    <ImageView android:id="@id/bluetooth_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="78.0dip" android:src="@drawable/bluetooth_icon" android:layout_below="@id/bluetooth_not_enabled" android:layout_centerHorizontal="true" />
    <Button android:textSize="@dimen/font_size_v2_f5" android:textColor="@drawable/btn_text" android:id="@id/btn_enable_bluetooth" android:background="@drawable/click_btn_bg_4" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="23.0dip" android:layout_marginTop="78.0dip" android:layout_marginRight="23.0dip" android:text="@string/enable_bluetooth" android:layout_below="@id/bluetooth_icon" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/font_size_v2_f6" android:textColor="#ff898d92" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:text="@string/enable_bluetooth_hint" android:layout_below="@id/btn_enable_bluetooth" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/font_size_v2_f5" android:textColor="@drawable/btn_text" android:id="@id/skip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/skip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>